@@ -1,3 +1,11 @@
+2009-07-10  Dominique Dumont  <dominique.dumont@hp.com> v0.501
+
+	* Build.PL: modified gcc options to issue more warnings (and fixed
+	them 
+
+	* lib/Config/Augeas.xs: Fixed compiler warnings (Thanks to
+	Guillaume Rousse)
+
 2009-05-27  Dominique Dumont  <dominique.dumont@hp.com> v 0.500
 
 	* lib/Config/Augeas.pm (new): added no_load, save => noop,
